--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: regmtait@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A super simple white label website built with Jekyll and using Dan Eden's Toast grid layout.
 baseurl: ""
-url: "https://example.com"
+url: "https://ginajihyeonlee.github.io/"
 phone: "07800 100100"
 theme-path: theme-assets # path to header assets etc
 map-api-key: AIzaSyB3U7uwIvCyq01orxppAIC1v73y-FBGygY
