--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 # Site settings
 title: Toasty Jekyll
-email: regmtait@gmail.com
+email: gina3833@kaist.ac.kr
 description: > # this means to ignore newlines until "baseurl:"
   A super simple white label website built with Jekyll and using Dan Eden's Toast grid layout.
 baseurl: ""
-url: "https://example.com"
-phone: "07800 100100"
+url: "https://ginajihyeonlee.github.io/"
 theme-path: theme-assets # path to header assets etc
 map-api-key: AIzaSyB3U7uwIvCyq01orxppAIC1v73y-FBGygY
 sass:
